# zuercherportal_api

./: README.md  inmate_search.py  jails.py  pyproject.toml  requirements.txt  tests.py  zuercherportal_api.py
.github/workflows/: pypi-publish.yml  python-tests.yml  testpypi-publish.yml
