[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zuercherportal_api"
version = "1.0.0-ALPHA1"
license = "GPL-3.0"
authors = [
  { name="KumpeApps LLC", email="jakumpe@kumpeapps.com" },
]
description = "Search data within Jail database for jails that use Zuercher Portal"
readme = "README.md"
requires-python = ">=3.12"
repository = "https://github.com/kumpeapps/zuercherportal_api"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English"
]
dependencies = [
  'requests',
  'loguru'
]
