[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zuercherportal_api"
version = "1.0.0-ALPHA8"
license = {file = "LICENSE.md"}
authors = [
  { name="KumpeApps LLC", email="jakumpe@kumpeapps.com" },
]
description = "Search data within Jail database for jails that use Zuercher Portal"
readme = "README.md"
requires-python = ">=3.11"
repository = "https://github.com/kumpeapps/zuercherportal_api"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English"
]
dependencies = [
  "requests>=2.32",
  "loguru>=0.7"
]
